--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.0",
     "gulp-noprotocol": "^0.7.0"
+  },
+  "dependencies": {
+    "angular-ui-bootstrap": "~1.3.2"
   }
 }
