--- a/bower.json
+++ b/bower.json
@@ -31,5 +31,8 @@
     "angular-route": "^1.5.5",
     "angular-animate": "^1.5.5",
     "bootstrap": "^3.3.6"
+  },
+  "devDependencies": {
+    "video.js": "^5.10.2"
   }
 }
