--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,9 @@
     "angular": "1.5.5",
     "angular-route": "^1.5.5",
     "angular-animate": "^1.5.5",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-drag-and-drop-lists": "^1.4.0",
+    "jPlayer": "jplayer#^2.9.2"
   },
   "devDependencies": {
     "video.js": "^5.10.2"
